<resources>
    <string name="navigation_drawer_open" translatable="false">open drawer</string>
    <string name="navigation_drawer_close" translatable="false">close drawer</string>

    <string name="app_name">NiceRead</string>

    <string name="gank">干货</string>
    <string name="girl">妹纸</string>
    <string name="video">视频</string>
    <string name="share">分享</string>
    <string name="set">设置</string>
    <string name="about">关于</string>
    <string name="copy">复制链接</string>

    <string name="main_menu_search">搜索</string>
    <string name="back_pressed_tip">再按就要说再见了</string>
    <string name="load_loading_tip">努力加载中</string>
    <string name="load_failed_tip">点我再试试？</string>
    <string name="load_end_tip">我也是有底线的哦</string>

    <string name="share_to">分享到</string>
    <string name="copy_success">复制链接成功</string>

    <string name="net_error">网络链接异常</string>splash

    <string name="set_app">应用</string>
    <string name="set_cache_summary">当前缓存大小：</string>
    <string name="set_cache_title">清除缓存</string>
    <string name="set_splash_summary">默认使用本地启动图，不从网络获取</string>
    <string name="set_splash_title">启动图设置</string>

    <string name="main_share_content">项目Github地址：https://github.com/Othershe/NiceRead</string>
</resources>
